<resources>
    <string name="app_name">Project2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_0">0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">x</string>
    <string name="equal">=</string>
    <string name="divide">/</string>
    <string name="mod">%</string>
    <string name="dec_pt">.</string>
    <string name="clr_recent">C</string>
    <string name="clr_all">CE</string>
    <string name="sqrt">sqrt</string>
</resources>